--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation 'com.google.firebase:firebase-firestore'
 
+    def nav_version = "2.5.1"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
 }
