--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Vistas.Menu_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Vistas.Password_Activity"
             android:exported="false" />
         <activity
