--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:21.1.1'
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
 
     def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
