--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+
     def nav_version = "2.5.2"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
