se modificaron los nombres de los layouts y el orden de ejecución, se agregró eliminar tarea y favorito

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Vistas.Detalle_Tarea"
+            android:name=".Vistas.Detalle_Tablero"
             android:exported="false" />
         <activity
             android:name=".Vistas.Menu_Activity"
