se agregó animaciones a las trasacciones de actividades y fragment's

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Vistas.Detalle_Tarea"
+            android:exported="false" />
+        <activity
             android:name=".Vistas.Detalle_Tablero"
             android:exported="false" />
         <activity
