--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.material:material:1.6.0'
 }
